Updated until step 7

--- a/index.html
+++ b/index.html
@@ -1,13 +1,19 @@
  <!DOCTYPE html>
  <html lang="en">
  <head>
+    <link rel="stylesheet" href="./style.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Haidar: Personal Site and Portfolio</title>
     <h1>Haidar El Haq</h1>
+    <nav>
+        <a href="projects/index.html">See my projects</a>
+        <a href="contact/index.html">Contact me</a>
+        <a href="https://github.com/elhaqhaidar" target="_blank">GitHub profile</a>
+    </nav>
  </head>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eos totam optio minus voluptatum id odio rerum labore, praesentium provident. Soluta iure magni temporibus aperiam fugiat consectetur quam, commodi distinctio sequi?</p>
  <body>
-    
+    <img src="image/ipad-and-studio.jpeg" alt="What we did when we were bored in the studio." width="600px">
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eos totam optio minus voluptatum id odio rerum labore, praesentium provident. Soluta iure magni temporibus aperiam fugiat consectetur quam, commodi distinctio sequi?</p>
  </body>
  </html>
