--- a/contact/index.html
+++ b/contact/index.html
@@ -7,8 +7,9 @@
     <title>Contact</title>
     <h1>Contact?</h1>
     <nav>
-        <a href="../index.html">Back to home</a>
-        <a href="../projects/index.html">See my projects</a>
+        <a href="../index.html">Back to home</a><br>
+        <a href="../projects/index.html">See my projects</a><br>
+        <a href="../about-me/index.html">About me</a><br>
         <a href="https://github.com/elhaqhaidar" target="_blank">GitHub profile</a>
     </nav>
 </head>
@@ -19,7 +20,8 @@
         <label for="subject">Subject:</label>
         <input type="text" name="subject">
         <label for="body">Body:</label>
-        <textarea name="body" id="" cols="30" rows="2.5"></textarea>
+        <textarea name="body" id="" cols="30" rows="2.5"></textarea><br>
+        <button>Submit</button>
     </form>
 </body>
 </html>
