--- a/index.html
+++ b/index.html
@@ -7,13 +7,14 @@
     <title>Haidar: Personal Site and Portfolio</title>
     <h1>Haidar El Haq</h1>
     <nav>
-        <a href="projects/index.html">See my projects</a>
-        <a href="contact/index.html">Contact me</a>
+        <a href="projects/index.html">See my projects</a><br>
+        <a href="contact/index.html">Contact me</a><br>
+        <a href="about-me/index.html">About me</a><br>
         <a href="https://github.com/elhaqhaidar" target="_blank">GitHub profile</a>
     </nav>
  </head>
  <body>
     <img src="image/ipad-and-studio.jpeg" alt="What we did when we were bored in the studio." width="600px">
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eos totam optio minus voluptatum id odio rerum labore, praesentium provident. Soluta iure magni temporibus aperiam fugiat consectetur quam, commodi distinctio sequi?</p>
+    <p>Things we do when we're bored...</p>
  </body>
  </html>
