--- a/index.html
+++ b/index.html
@@ -7,11 +7,13 @@
     <title>Haidar: Personal Site and Portfolio</title>
     <h1>Haidar El Haq</h1>
     <nav>
-        <a href="projects/index.html">See my projects</a><br>
-        <a href="contact/index.html">Contact me</a><br>
-        <a href="about-me/index.html">About me</a><br>
-        <a href="https://github.com/elhaqhaidar" target="_blank">GitHub profile</a>
+        <a class="bordered" href="../index.html">Home</a>
+        <a class="current" href="../about-me/index.html">About me</a>
+        <a class="current" href="../contact/index.html">Contact me</a>
+        <a class="current" href="../projects/index.html">Projects</a>
+        <a class="current" href="https://github.com/elhaqhaidar" target="_blank">GitHub profile</a>
     </nav>
+    <script type="module" src="global.js"></script>
  </head>
  <body>
     <img src="image/ipad-and-studio.jpeg" alt="What we did when we were bored in the studio." width="600px">
