--- a/about-me/index.html
+++ b/about-me/index.html
@@ -6,10 +6,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>About Me</title>
     <h1>About me</h1>
-        <a href="../index.html">Back to home</a><br>
-        <a href="../contact/index.html">Contact me</a><br>
-        <a href="../projects/index.html">Projects</a><br>
-        <a href="https://github.com/elhaqhaidar" target="_blank">GitHub profile</a>
+    <nav>
+        <a class="current" href="../index.html">Home</a>
+        <a class="bordered" href="../about-me/index.html">About me</a>
+        <a class="current" href="../contact/index.html">Contact me</a>
+        <a class="current" href="../projects/index.html">Projects</a>
+        <a class="current" href="https://github.com/elhaqhaidar" target="_blank">GitHub profile</a>
     </nav>
 </head>
 <body>
