--- a/projects/index.html
+++ b/projects/index.html
@@ -5,87 +5,78 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Projects</title>
-    <h1>Projects?</h1>
+    <h1>Projects?
+    </h1>
     <nav>
-        <a href="../index.html">Back to home</a><br>
-        <a href="../contact/index.html">Contact me</a><br>
-        <a href="../about-me/index.html">About me</a><br>
-        <a href="https://github.com/elhaqhaidar" target="_blank">GitHub profile</a>
+        <a class="current" href="../index.html">Home</a>
+        <a class="current" href="../about-me/index.html">About me</a>
+        <a class="current" href="../contact/index.html">Contact me</a>
+        <a class="bordered" href="../projects/index.html">Projects</a>
+        <a class="current" href="https://github.com/elhaqhaidar" target="_blank">GitHub profile</a>
     </nav>
 </head>
 <body>
-    <nav>
-        <ul>
-            <li><a href="#tembusu">Tembusu and the Commodification of Urban Trees in Singapore</a></li>
-            <li><a href="#ikn">THE BIG BIRD, THE CASTED FEET, AND THE WARTY PIG</a></li>
-        </ul>
-    </nav>
-    <br>
-    <article id="#tembusu">
-        <header>
-            <h3>Tembusu and the Commodification of Urban Trees in Singapore</h3>
-            <p>4.181 Financial Forms, Fall 2023</p>
-            <p>Instructor: Jaffer Kolb</p>
-        </header>
-        <p>
-            Urban trees have been instrumentalized for different purposes: sequestering carbon, providing ecosystem services, rendering shade, mitigating urban heat island, offsetting deforestation, aiding economy, increasing property value, reducing heat islands, preventing runoff, filtering pollution, shaping national image. In order to carry out the roles, they have been measured, curated, commodified, financialized, quantified, assessed, utilized, sensed, controlled, engineered, extracted, valuated, transacted.
-            Singapore, in particular, has envisioned itself as a “City in Nature”1—a city that preserves, grows, and restores its natural capital—and integrates nature, both land-based and vertically, into its urban area by planting flowering trees and bushes.
-            On the other hand, the land-scarce island exhibits a tension between perpetual growth and natural conservation since property development consistently presents the untapped forests as viable real estate, as instanced by the accidental destruction of a forest in Kranji2, in the northern part of the island, by a development company.
-            I'm trying to document the multifaceted, sometimes in contention with each other, portraits of micro-narratives of the natural capital and urban trees in Singapore; the attempts that point towards instrumentalization and possibily otherwise; when the tree becomes a service and when the tree wants to be... a tree. In this case, I will also specifically focus on the Tembusu tree, or Fagraea fragrans, as the main subject of inquiry, due to its ubiquity and familiarity as an urban tree in Singapore.
-        </p>
-        <footer>
-            <iframe src="https://drive.google.com/file/d/1Zf1oA4vHsNL2J4t0-FCKYIC3-EhNHuFq/preview" frameborder="0" width="1200" height="1000"></iframe>
-        </footer>
-    </article>
-    <br>
-    <article id="ikn">
-        <header>
-            <h3>THE BIG BIRD, THE CASTED FEET, AND THE WARTY PIG: Cement extraction and Indonesia's new capital through scales</h3>
-            <p>4.228 Contemporary Urbanism Proseminar, Fall 2023</p>
-            <p>Instructor: Rania Ghosn</p>
-        </header>
-        <p>
-            Since the early 2000s, somewhere between 110
-            and 150 new cities have emerged across Asia
-            and Africa[1]. From the oxymoronic Neom in
-            Saudi Arabia, to a “new Singapore” right across
-            the real Singapore in Johor strait. Indonesia,
-            Egypt, South Korea, and South Sudan are
-            moving their capitals. Constructing new cities
-            is lucrative, providing new ways to rebrand
-            themselves[2] and open up new large-scale
-            investment opportunities. In contrary, while
-            many of the new cities bring up new standards
-            of sustainability and carbon emissions, the rate
-            of material movement from construction and
-            agricultural activity surpassed, by an order of
-            ten, that of geological processes[3].
-            This research specifically focuses on the
-            construction of Indonesia's new capital city
-            in East Kalimantan—a city currently under
-            construction that rapidly materializes in realtime.
-            The city embodies a narrative of a “forest
-            city,”[4] a “carbon-neutral city,”[5] and a “green
-            and smart city,”[6] among other titles. It seems
-            poised to be the antithesis of the Jakarta we
-            know. Beyond the grand narrative, issues related
-            to forest conservation, oligarchs' conflict of
-            interest, foreign investment, indigenous land
-            struggle, and environmental concerns loom
-            large. Its future is contested, and so is its past.
-            Furthermore, the research attempts to invite
-            us to rethink the geological, ecological, and
-            social cost of constructing a new “green”
-            and “sustainable” megaproject from scratch.
-            Trans-scalar inquiries at the sites of cement
-            extraction—one specific material of widespread
-            use in the construction—and its impact on the
-            more extensive socio-ecological conditions will
-            be the starting point of the research.
-        </p>
-        <footer>
-            <iframe src="https://drive.google.com/file/d/1fizasS9z16vu0zdKUx0yLpm378w0uI0d/preview" frameborder="0" width="1200" height="1000"></iframe>
-        </footer>
-    </article>
+    <div class="projects">
+        <article class="article">
+            <h2>Lorem ipsum dolor sit.</h2>
+            <img src="https://vis-society.github.io/labs/2/images/empty.svg" alt="">
+            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Omnis excepturi nobis cum ad, quos accusamus culpa tempore. Voluptate excepturi vitae, corrupti molestiae ullam unde eaque inventore perspiciatis? Qui, accusantium quo.</p>
+        </article>
+        <article class="article">
+            <h2>Voluptas inventore reiciendis eligendi?</h2>
+            <img src="https://vis-society.github.io/labs/2/images/empty.svg" alt="">
+            <p>Iure doloremque quo quas quibusdam illo nemo itaque magnam fugit praesentium ipsum voluptatum dolorum adipisci iste quaerat, odio sint ipsa alias neque placeat eligendi ullam pariatur error modi? Commodi, optio.</p>
+        </article class="article">
+        <article class="article">
+            <h2>Fugiat iste deleniti eligendi!</h2>
+            <img src="https://vis-society.github.io/labs/2/images/empty.svg" alt="">
+            <p>Blanditiis in exercitationem, voluptates eveniet molestiae dignissimos doloribus, quae dolores nisi, perspiciatis ab vero quibusdam officia culpa provident praesentium labore sunt corrupti tempore? Quo, numquam odit? Magni tempore quas quibusdam.</p>
+        </article>
+        <article class="article">
+            <h2>Consequuntur necessitatibus id atque?</h2>
+            <img src="https://vis-society.github.io/labs/2/images/empty.svg" alt="">
+            <p>Dignissimos, unde. Atque quaerat magnam eveniet vitae. Magnam velit eveniet aut quam impedit consequatur et ratione in earum, ad voluptatem debitis error vero quia facilis sit soluta tempore sapiente suscipit.</p>
+        </article>
+        <article class="article">
+            <h2>Dolor consectetur aliquid omnis.</h2>
+            <img src="https://vis-society.github.io/labs/2/images/empty.svg" alt="">
+            <p>Accusantium temporibus autem pariatur facere eos officiis tempore porro voluptatum numquam amet sequi minima, blanditiis nihil unde aliquid molestiae dolor odit doloribus praesentium distinctio saepe dolorem consequuntur non. Sit, laboriosam.</p>
+        </article>
+        <article class="article">
+            <h2>Consequatur eius cumque necessitatibus.</h2>
+            <img src="https://vis-society.github.io/labs/2/images/empty.svg" alt="">
+            <p>Dolores dicta veritatis ab porro harum voluptas sit, a, numquam incidunt excepturi iusto facilis culpa sint explicabo, cupiditate blanditiis quibusdam necessitatibus doloremque non accusantium quisquam alias aspernatur autem. Praesentium, velit!</p>
+        </article>
+        <article class="article">
+            <h2>Culpa commodi odit provident.</h2>
+            <img src="https://vis-society.github.io/labs/2/images/empty.svg" alt="">
+            <p>Recusandae libero consequuntur veritatis laborum quisquam? Dolores iusto ipsa ipsum illo asperiores ea expedita harum ipsam consectetur, saepe quaerat eius in dolore veritatis soluta odit? Autem facilis quaerat perspiciatis libero!</p>
+        </article>
+        <article class="article">
+            <h2>Modi vero quaerat culpa!</h2>
+            <img src="https://vis-society.github.io/labs/2/images/empty.svg" alt="">
+            <p>Aspernatur fugit quisquam fugiat enim optio totam consectetur quaerat maiores accusantium repudiandae. Laboriosam et aliquid deleniti molestias excepturi odit, eligendi nulla provident temporibus iusto impedit cupiditate, fuga nostrum autem cum!</p>
+        </article>
+        <article class="article">
+            <h2>Nesciunt ut ullam nemo?</h2>
+            <img src="https://vis-society.github.io/labs/2/images/empty.svg" alt="">
+            <p>Ad eligendi vel laborum mollitia ea nostrum odio! Natus aut rerum, aspernatur ipsum, illo harum quibusdam eos, porro ex ratione voluptas doloribus? Eius quibusdam iure minima hic eveniet modi sunt.</p>
+        </article>
+        <article class="article">
+            <h2>Illo corporis nemo porro.</h2>
+            <img src="https://vis-society.github.io/labs/2/images/empty.svg" alt="">
+            <p>Aperiam fuga possimus, omnis saepe dicta minus eveniet laborum ipsam laboriosam laudantium sint velit sed rem modi, aliquam numquam! Nihil assumenda itaque perferendis neque. Eum, similique. Illo inventore possimus molestiae.</p>
+        </article>
+        <article class="article">
+            <h2>Modi provident eius velit!</h2>
+            <img src="https://vis-society.github.io/labs/2/images/empty.svg" alt="">
+            <p>Adipisci, porro ducimus eius dolore optio rerum. Unde aliquid, sit voluptates totam consequatur accusamus similique. Dolorum, maxime ullam, harum doloremque explicabo reprehenderit fuga id, possimus ratione esse iure nesciunt at?</p>
+        </article>
+        <article class="article">
+            <h2>Necessitatibus architecto praesentium optio.</h2>
+            <img src="https://vis-society.github.io/labs/2/images/empty.svg" alt="">
+            <p>Necessitatibus dolorum nihil optio dolorem asperiores quia beatae corrupti pariatur! Omnis corporis assumenda minima magnam hic qui ipsa blanditiis odit architecto. Dolore unde blanditiis ullam numquam praesentium nihil est aperiam.</p>
+        </article>
+    </div>
 </body>
 </html>
